--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,9 @@
     --grey-color: #2E2F42B2;
     --white-color: #FFFFFF;
     --dairy-color: #FCFCFC;
+
+    --mytransition-duration: 250ms;
+    --mytransition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -95,6 +98,23 @@ ul {
 .logo-textfooter-studio {
     color: var(--cloud-color);
 }
+
+.accent {
+    position: relative;
+}
+.accent::after {
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    content: '';
+    width: 100%;
+    height: 4px;
+    flex-shrink: 0;
+    border-radius: 2px;
+    background-color: var(--ocean-color);
+}
+
+
 
 .contact-link {
     color: var(--slate-color);
