--- a/css/styles.css
+++ b/css/styles.css
@@ -590,3 +590,18 @@ ul {
 .footer-svg:hover {
     fill: var(--green-color);
 }
+
+.modal-window {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    min-width: 100vw;
+}
+
+.modal-window.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
