--- a/css/styles.css
+++ b/css/styles.css
@@ -598,10 +598,39 @@ ul {
     align-items: center;
     min-height: 100vh;
     min-width: 100vw;
+    opacity: 1;
+    background: var(--navybluemodal-color, rgba(46, 47, 66, 0.40));
+     
 }
 
 .modal-window.is-hidden {
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
+}
+
+.modal-window-body {
+    position: relative;
+    width: 408px;
+    height: 584px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: var(--dairy-color);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+}
+
+.button-close {
+    cursor: pointer;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    background-color: var(--cornflower-color);
+    padding: 0;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
