--- a/css/styles.css
+++ b/css/styles.css
@@ -637,3 +637,10 @@ ul {
     align-items: center;
 
 }
+
+.button-close:hover,
+.button-close:focus {
+    background-color: var(--ocean-color);
+    fill: var(--white-color);
+    border: none;
+}
