--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ ul {
 .accent {
     position: relative;
     color: var(--ocean-color);
-    transition: var(--mytransition-duration) var(--mytransition-timing-function);
+    transition: color var(--mytransition-duration) var(--mytransition-timing-function);
 }
 .accent::after {
     position: absolute;
@@ -125,7 +125,7 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     padding: 24px 0;
-    transition: var(--mytransition-duration) var(--mytransition-timing-function);
+    transition: color var(--mytransition-duration) var(--mytransition-timing-function);
 }
 
 .contact-link:hover {
@@ -308,6 +308,8 @@ ul {
     border: none;
     border-radius: 4px;
     margin: 0 auto;
+    transition: background-color var(--mytransition-duration) var(--mytransition-timing-function);
+
 }
 
 .order-service-button:hover {
@@ -487,6 +489,7 @@ ul {
     justify-content: center;
     flex-shrink: 0;
     color: var(--lightslate-color);
+    transition: background-color var(--mytransition-duration) var(--mytransition-timing-function), color var(--mytransition-duration) var(--mytransition-timing-function);
 }
 
 .link-customers:hover {
@@ -525,6 +528,7 @@ ul {
     height: 100%;
     background-color: var(--iris-color);
     border-radius: 50%;
+    transition: background-color var(--mytransition-duration) var(--mytransition-timing-function);
 }
 
 .social-media-link:hover {
