--- a/css/styles.css
+++ b/css/styles.css
@@ -610,6 +610,7 @@ ul {
     background: var(--navybluemodal-color, rgba(46, 47, 66, 0.40));
     top: 0;
     left: 0;
+    transition: opacity var(--mytransition-duration) var(--mytransition-timing-function);
     
 }
 
@@ -623,12 +624,15 @@ ul {
 .modal-window-body {
     position: absolute;
     width: 408px;
-    height: 584px;
+    min-height: 584px;
     flex-shrink: 0;
     border-radius: 4px;
     background: var(--dairy-color);
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-  
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform var(--mytransition-duration) var(--mytransition-timing-function);
 }
 
 
@@ -647,13 +651,22 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: background-color var(--mytransition-duration) var(--mytransition-timing-function), border var(--mytransition-duration) var(--mytransition-timing-function);
 
 }
 
 .button-close:hover,
 .button-close:focus {
     background-color: var(--ocean-color);
-    fill: var(--white-color);
     border: none;
+}
+
+.svg-close {
+    transition: fill var(--mytransition-duration) var(--mytransition-timing-function);
+}
+
+.svg-close:hover,
+.svg-close:focus {
+    fill: var(--white-color);
 }
 
