--- a/css/styles.css
+++ b/css/styles.css
@@ -366,6 +366,7 @@ ul {
     padding: 12px 24px;
     border: 1px solid var(--cornflower-color);
     border-radius: 4px;
+    transition: color var(--mytransition-duration) var(--mytransition-timing-function), background-color var(--mytransition-duration) var(--mytransition-timing-function), border var(--mytransition-duration) var(--mytransition-timing-function), box-shadow var(--mytransition-duration) var(--mytransition-timing-function);
 }
 
 .button-text:hover {
