--- a/css/styles.css
+++ b/css/styles.css
@@ -218,15 +218,15 @@ ul {
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
         0px 1px 1px 0px rgba(46, 47, 66, 0.16),
         0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-    transform: translateX(0%) translateY(0%);
+    
 }
 
-.portfolio-project-pop-up {
+.pop-up {
     position: relative;
     overflow: hidden;
-
+    transform: translateY(0%);
 }
-.portfolio-project-pop-up-text {
+.pop-up-text {
     position: absolute;
     top: 0;
     font-family: Roboto;
@@ -243,6 +243,11 @@ ul {
     width: 100%;
     transform: translateY(100%);
     transition: transform var(--mytransition-duration) var(--mytransition-timing-function)
+}
+
+.pop-up:hover .pop-up-text
+.pop-up:focus .pop-up-text {
+    transform: translateY(0%);
 }
 
 .projects {
