--- a/css/styles.css
+++ b/css/styles.css
@@ -236,9 +236,7 @@ ul {
     letter-spacing: 0.02em;
     color: var(--cloud-color);
     background-color: var(--iris-color);
-    padding-top: 40px;
-    padding-left: 32px;
-    padding-right: 32px;
+    padding: 40px 32px;
     height: 100%;
     width: 100%;
     transform: translateY(100%);
