--- a/css/styles.css
+++ b/css/styles.css
@@ -395,10 +395,10 @@ ul {
     border: 1px solid var(--cornflower-color);
     border-radius: 4px;
 
-    transition: color var(--mytransition-duration) var(--mytransition-timing-function), 
-    background-color var(--mytransition-duration) var(--mytransition-timing-function), 
-    border var(--mytransition-duration) var(--mytransition-timing-function), 
-    box-shadow var(--mytransition-duration) var(--mytransition-timing-function);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-text:hover {
